// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> should render 1`] = `
<a
  class="component"
  to="/app/settings/users/1"
>
  <span
    class="d-flex align-items-center"
  >
    <div
      class="component avatar d-none d-md-block"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AS
        </span>
      </div>
    </div>
    <span
      class="meta"
    >
      <p
        class="name"
      >
        Acme Support
      </p>
      <p
        class="email text-faded"
      >
        hello@acme.gorgias.io
      </p>
    </span>
    <span
      class="role"
    >
      <div
        class="badge"
      >
        Admin
      </div>
    </span>
    <span
      class="twoFa"
    >
      <div
        class="badge"
      >
        Yes
      </div>
    </span>
    <span
      class="delete"
    >
      <button
        class="wrapper wrapper ghost ghost destructive medium"
        id="delete-agent-1"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          delete
        </i>
      </button>
    </span>
  </span>
</a>
`;

exports[`<Row /> should render 2FA information when enabled 1`] = `
<a
  class="component"
  to="/app/settings/users/1"
>
  <span
    class="d-flex align-items-center"
  >
    <div
      class="component avatar d-none d-md-block"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AS
        </span>
      </div>
    </div>
    <span
      class="meta"
    >
      <p
        class="name"
      >
        Acme Support
      </p>
      <p
        class="email text-faded"
      >
        hello@acme.gorgias.io
      </p>
    </span>
    <span
      class="role"
    >
      <div
        class="badge"
      >
        Admin
      </div>
    </span>
    <span
      class="twoFa"
    >
      <div
        class="badge"
      >
        Yes
      </div>
    </span>
    <span
      class="delete"
    >
      <button
        class="wrapper wrapper ghost ghost destructive medium"
        id="delete-agent-1"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          delete
        </i>
      </button>
    </span>
  </span>
</a>
`;

exports[`<Row /> should render 2FA information when enabled and agent has 2FA disabled 1`] = `
<a
  class="component"
  to="/app/settings/users/1"
>
  <span
    class="d-flex align-items-center"
  >
    <div
      class="component avatar d-none d-md-block"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          AS
        </span>
      </div>
    </div>
    <span
      class="meta"
    >
      <p
        class="name"
      >
        Acme Support
      </p>
      <p
        class="email text-faded"
      >
        hello@acme.gorgias.io
      </p>
    </span>
    <span
      class="role"
    >
      <div
        class="badge"
      >
        Admin
      </div>
    </span>
    <span
      class="twoFa"
    >
      <div
        class="badge"
      >
        No
      </div>
    </span>
    <span
      class="delete"
    >
      <button
        class="wrapper wrapper ghost ghost destructive medium"
        id="delete-agent-1"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          delete
        </i>
      </button>
    </span>
  </span>
</a>
`;

exports[`<Row /> should render a user without a name 1`] = `
<a
  class="component"
  to="/app/settings/users/1"
>
  <span
    class="d-flex align-items-center"
  >
    <div
      class="component avatar d-none d-md-block"
      style="width: 36px; height: 36px;"
    >
      <div
        class="initials"
        style="width: 36px; height: 36px; font-size: 15px;"
      >
        <span
          style="line-height: 38px;"
        >
          h
        </span>
      </div>
    </div>
    <span
      class="meta"
    >
      <p
        class="name"
      >
        hello@acme.gorgias.io
      </p>
    </span>
    <span
      class="role"
    >
      <div
        class="badge"
      >
        Admin
      </div>
    </span>
    <span
      class="twoFa"
    >
      <div
        class="badge"
      >
        Yes
      </div>
    </span>
    <span
      class="delete"
    >
      <button
        class="wrapper wrapper ghost ghost destructive medium"
        id="delete-agent-1"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          delete
        </i>
      </button>
    </span>
  </span>
</a>
`;
